// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonLoader renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  style={
    {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-fotqef"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1l0joh4"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1c2gwvd"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
  style={
    {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-fotqef"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="row css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1l0joh4"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1c2gwvd"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
  style={
    {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-fotqef"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1l0joh4"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1c2gwvd"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 4`] = `
<div
  className="css-1xdhyk6"
  style={
    {
      "width": undefined,
    }
  }
>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1l0joh4"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1c2gwvd"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 5`] = `
<div
  className="css-1xdhyk6"
  style={
    {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-fotqef"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1c2gwvd"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 6`] = `
<div
  className="css-1xdhyk6"
  style={
    {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-fotqef"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1l0joh4"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 7`] = `
<div
  className="css-1xdhyk6"
  style={
    {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-fotqef"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1l0joh4"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1c2gwvd"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-du76nm"
      >
        <div
          className="css-0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 8`] = `
<div
  className="css-1xdhyk6"
  style={
    {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-fotqef"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1l0joh4"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1c2gwvd"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 9`] = `
<div
  className="css-1xdhyk6"
  style={
    {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-fotqef"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1l0joh4"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1c2gwvd"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 10`] = `
<div
  className="css-1xdhyk6"
  style={
    {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-fotqef"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1l0joh4"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1c2gwvd"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 11`] = `
<div
  className="css-kle7zy"
  style={
    {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-fotqef"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1l0joh4"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1c2gwvd"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader renders the UI snapshot correctly 12`] = `
<div
  className="css-1xdhyk6"
  data-testid="props"
  style={
    {
      "width": undefined,
    }
  }
>
  <div
    className="chakra-skeleton css-fotqef"
  >
    <div
      className="css-0"
    />
  </div>
  <div
    className="column css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-1l0joh4"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-lx2l1e"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": undefined,
            }
          }
        />
      </div>
      <div
        className="chakra-skeleton css-1c2gwvd"
      >
        <div
          className="css-0"
          style={
            {
              "marginBottom": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
